assets/css/style.css
html, body {
    font-family: Open Sans;

    /* Don't ever go smaller than 14pt for main text */
    font-size: 16pt;
    height: 100%;
    background-color: #FCF9FF;
}

body {
    /*border-top: 20px solid;*/
}

h1, h2, h3, h4, h5, h6 {
    /*text-align: center;*/
    /*margin-bottom: 0.9em;
    margin-top: 0.6em;*/
    font-family: inherit;
}

footer *::-moz-selection {
    color: #748DA3;
    background-color: white;
}

footer {
    clear: both;
    width: 100%;
    position: relative;
    z-index: 10;
    font-size: 13px;
}

.center-text {
    text-align: center;
}

a {
    color: inherit;
    text-decoration: none;
    /*border-bottom: 1px solid #AAA;*/
}

a:hover {
    /*border-bottom: 3px solid;*/
    color: #748DA3;
    text-decoration: none;
}

a {
    transition: all 0.2s ease 0s;
    -moz-transition: all 0.2s ease 0s;
    -webkit-transition: all 0.2s ease 0s;
    -o-transition: all 0.2s ease 0s;
}

h1 a {
    line-height: 1.25em;
}

.slightly-dim {
    color: #AAA;
}

.copyright-notice {
    margin: 40px 0;
    text-align: right;
    font-size: 10px;
}

figure {
    margin-bottom: 20px;
    margin-top: 20px;
}

figcaption {
    font-style: italic;
    text-align: center;
}

p, iframe {
    margin-bottom: 20px;
}

/* HEADER */

.top-header {
    padding-top: 20px;
    margin-bottom: 60px;
}

header *::selection {
    background-color: #748DA3;
    color: white;
}

header *::-moz-selection {
    background-color: #748DA3;
    color: white;
}


/* POST */

h2.post-title {
    margin-top: -0.3em;
}

.post-preview {
    margin-bottom: 20px !important;
}

@media only screen and (min-width: 40.063em) {
    .post-mast {
        border-left: 1px dashed;
    }

    .post-meta {
        margin-top: 20px;
        line-height: 1.4em;
        text-align: right;
    }
}

.post-description {
    font-style: italic;
    font-size: 90%;
}

/* TYPOGRAPHY */

@media only screen and (min-width: 40.063em) {
    blockquote {
        margin-left: -26px;
    }

    ul {
        margin-left: -0px;
        list-style: square;
    }
}

.geeky-catchphrase {
    font-size: 20pt;
    font-weight: 100;
}

.geeky-catchphrase > a > div {
    margin-bottom: 0.5em;
}

/* FOOTER */

footer ul.inline-list li {
    margin-bottom: 10px;
}

footer ul.inline-list {
    margin-bottom: 0;
}

